--- a/client/cef/css/style.css
+++ b/client/cef/css/style.css
@@ -1,3 +1,33 @@
+:root {
+    --row_height: 12vh;
+}
+
+
+@font-face {
+    font-family: Roboto;
+    src: url('../fonts/Roboto-Regular.ttf') format('truetype');
+    font-weight: normal;
+}
+
+@font-face {
+    font-family: Roboto;
+    src: url('../fonts/Roboto-Bold.ttf') format('truetype');
+    font-weight: bold;
+}
+
+
+@font-face {
+    font-family: Lato;
+    src: url("../fonts/Lato-Regular.ttf") format('truetype');
+    font-weight: normal;
+}
+
+@font-face {
+    font-family: Lato;
+    src: url("../fonts/Lato-Bold.ttf") format('truetype');
+    font-weight: bold;
+}
+
 @font-face {
     font-family: "BebasNeue";
     src: url('../fonts/BebasNeue-Regular.ttf');
@@ -7,6 +37,10 @@ body {
     overflow: hidden;
     padding: 0;
     margin: 0;
+  -webkit-user-select: none; /* Safari 3.1+ */
+  -moz-user-select: none; /* Firefox 2+ */
+  -ms-user-select: none; /* IE 10+ */
+  user-select: none; /* Standard syntax */
 }
 .btn {
     font-family: BebasNeue;
@@ -150,466 +184,111 @@ input:focus {
     border-bottom: 1px solid #09a100 !important;
     box-shadow: 0 1px 0 0 #09a100 !important;
 }
-#team {
-    display: inline-block;
+#lobbies {
     position: absolute;
-    padding: 0.5vh;
-    top: 80%;
-    width: 20vw;
-    left: calc(50% - 10vw);
-    transition: all 0.3s cubic-bezier(.59, 0, .66, 1.31);
-    opacity: 0.9;
-}
-#team>.skin_select {
-    position: relative;
     width: 70%;
-    margin-left: 15%;
-    padding: 0.5vh;
-    margin-bottom: 5px;
-    background: #eeeeee;
-    border-radius: 1px;
-    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
-    border-radius: 2px;
-    height: 3.5vh;
-    min-height: 50px;
-}
-#team>.skin_select>.btn {}
-#team>.skin_select>.btn>i {}
-#team>.skin_select>.skin {
-    position: absolute;
-    display: block;
-    width: 100%;
-    left: 0;
-    top: 0;
-    text-align: center;
-    line-height: 3.5vh;
-}
-#team>.team_select {
-    position: relative;
-    width: 100%;
-    padding: 0.5vh;
-    margin-bottom: 5px;
-    background: #eeeeee;
-    border-radius: 1px;
-    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
-    border-radius: 2px;
-    height: 3.5vh;;
-    min-height: 50px;
-}
-#team>.team_select>.btn {}
-#team>.team_select>.btn>i {}
-#team>.team_select>.team {
-    position: absolute;
-    display: block;
-    width: 100%;
-    left: 0;
-    top: 0;
-    text-align: center;
-    line-height: 3.5vh;
-}
-#team>.select_final {
-    position: relative;
-    width: 60%;
-    margin-left: 20%;
-    padding: 0.5vh;
-    margin-bottom: 5px;
-    background: #eeeeee;
-    border-radius: 1px;
-    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
-    border-radius: 2px;
-    height: 3.5vh;;
-    min-height: 50px;
-}
-#team>.select_final>.btn {
-    text-align: center;
-    width: 96%;
-    margin-left: 2%;
-    position: relative;
-    display: inline-block;
-}
-#team>.select_final>.btn>.text {
-    position: absolute;
-    width: 100%;
-    left: 0;
-    display: inline-block;
-    padding-bottom: 2px;
-    text-align: center;
-    padding-left: 5px;
-    height: 3vh;
-}
-#team>.select_final>.btn>i {
-    position: absolute;
-    width: 100%;
-    left: 0;
-    display: inline-block;
-    text-align: left;
-    padding-left: 15px;
-}
-#shop {
-    display: inline-block;
-    position: absolute;
-    padding: 0.5vh;
-    width: 60vw;
-    height: 50vh;
-    background: #eeeeee;
-    top: calc(50% - 25vh);
-    left: calc(50% - 30vw);
-    transition: all 0.3s cubic-bezier(.59, 0, .66, 1.31);
-    opacity: 1;
-    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
-}
-#shop>.headline {
-    display: block;
-    position: relative;
-    width: 30vw;
-    padding-top: 10px;
-    padding-left: 15px;
-    font-size: 18px;
-    font-family: BebasNeue;
-    color: #515151;
-}
-#shop>.buyable_weapons {
-    display: block;
-    position: relative;
-    padding-top: 10px;
-    padding-left: 15px;
-    font-size: 18px;
-    font-family: BebasNeue;
-    color: #515151;
+    height: 80%;
+    left: 15%;
+    top: 10%;
     display: flex;
-    flex-direction: row;
     flex-wrap: wrap;
+    justify-content: center;
     align-content: baseline;
-    flex-basis: auto;
-    opacity: 0.9;
-    max-height: 45vh;
-    overflow: overlay;
+    overflow:overlay;
 }
-#shop>.buyable_weapons>.item {
-    display: inline-block;
+#lobbies>.lobby {
     position: relative;
-    width: 12vw;
-    max-width: 200px;
-    background: #eeeeee;
-    margin: auto;
-    margin-right: auto;
-    float: left;
-    border-radius: 2px;
-    cursor: pointer;
-    margin-bottom: 1vh;
-    padding-bottom: 5px;
-    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
-    transition: all 0.1s linear;
-    -webkit-user-select: none;
-    /* Safari 3.1+ */
-    -moz-user-select: none;
-    /* Firefox 2+ */
-    -ms-user-select: none;
-    /* IE 10+ */
-    user-select: none;
-}
-#shop>.buyable_weapons>.item:hover {
-    background: #ffc7c7;
-    transition: all 0.1s linear;
-    z-index: 9999;
-    opacity: 1;
-}
-#shop>.buyable_weapons>.item>.image {
-    display: inline-block;
-    width: 100%;
-    padding-top: 15px;
-    padding-left: 15px;
-    padding-right: 15px;
-    margin-top: 0.4vh;
-}
-#shop>.buyable_weapons>.item>.image>img {
-    position: relative;
-    display: block;
-    max-height: 60px;
-    margin: auto;
-}
-#shop>.buyable_weapons>.item>.name {
-    position: relative;
-    display: inline-block;
-    width: 100%;
-    text-align: center;
-    left: 0;
-}
-#shop>.buyable_weapons>.item>.price {
-    position: relative;
-    display: inline-block;
-    width: 100%;
-    text-align: center;
-    left: 0;
-    bottom: 0.5vh;
-}
-#shop>.buyable_weapons>.item>.ammo {
-    position: relative;
-    width: 100%;
-    text-align: center;
-    top: 0;
     padding: 0;
-    margin-top: -8px;
-    font-size: 12px;
+    margin: 0;
+    width: 25%;
+    max-width: 25%;
+    height: 25%;
+    min-width: 300px;
+    min-height: 150px;
+    overflow: hidden;
+    float: left;
+    flex: 1 0 25%;
+    /* explanation below */
+    cursor: pointer;
 }
-#shop>.buyable_weapons>.item>.buy {
-    position: absolute;
-    bottom: 0px;
-    display: none;
-    line-height: 30px;
+#lobbies>.lobby>.background {
+    position: relative;
     width: 100%;
-    text-align: center;
-    opacity: 0;
-    transition: all 0.1s linear;
+    height: 100%;
 }
-#shop>.buyable_weapons>.item:hover .buy {
+#lobbies>.lobby>.background img {
     position: absolute;
-    bottom: 0px;
-    padding-top: 15px;
-    display: block;
-    line-height: 30px;
     width: 100%;
-    text-align: center;
-    opacity: 1;
-    transition: all 0.1s linear;
-    z-index: 9999;
+    height: 100%;
+    object-fit: cover;
+    left: 0%;
+    top: 0%;
+    /*magic*/
+    transition: all 0.3s linear;
 }
-#shop>.buyable_weapons>.item>.buy>span {
-    display: block;
-    /*
-    width: 90%;
-    margin-left: 5%;*/
-    line-height: 30px;
-    padding-top: 3px;
-    background: #eeeeee;
-    color: #FFF;
-    border: solid 1px solid 1px rgba(0, 0, 0, 0.8);
-    background-image: linear-gradient(#ef1317, #8a0307);
-    border-color: #228B22, #008000 #008000;
-    /*box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3), 0 0 0 1px rgba(255, 255, 255, 0.2) inset;*/
-    text-shadow: 0 1px 0 #69221e;
-    text-align: center;
-    border-radius: 3px;
-    border-bottom: 3px solid #330708;
-    border-right: 1px solid #330708;
-    transition: all 0.05s linear;
-}
-#shop>.buyable_weapons>.item>.buy>span:hover {
-    display: block;
-    width: 100%;
-    line-height: 30px;
-    padding-top: 3px;
-    color: #FFF;
-    text-align: center;
-    background-color: #515151;
-    background-image: linear-gradient(#ff3538, #811719);
-    border-color: #3d3d3d #2b2b2b #191919;
-    /*box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3), 0 0 0 1px rgba(255, 255, 255, 0.1) inset;*/
-    color: #ffffff;
-    border-radius: 3px;
-    border-bottom: 1px solid #330708;
-    border-right: 1px solid #330708;
-    transition: all 0.05s linear;
-}
-#vehicle_spawner {
-    display: inline-block;
+#lobbies>.lobby:hover>.background img {
     position: absolute;
-    padding: 0.5vh;
-    width: 45vw;
-    background: rgba(238, 238, 238, 0.95);
-    top: calc(40% - 20vh);
-    left: calc(50% - 22.5vw);
-    transition: all 0.3s cubic-bezier(.59, 0, .66, 1.31);
-    opacity: 1;
-    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
-    min-height: 250px;
-    min-width: 600px;
-    opacity: 0;
+    left: -10%;
+    top: -10%;
+    width: 120%;
+    height: 120%;
+    transition: all 0.3s linear;
 }
-#vehicle_spawner>.headline {
-    display: block;
-    position: relative;
-    width: 30vw;
-    padding-top: 10px;
-    padding-left: 15px;
-    font-size: 18px;
-    font-family: BebasNeue;
-    color: #515151;
-}
-#vehicle_spawner>.spawnable {
-    display: block;
-    position: relative;
-    padding-top: 10px;
-    padding-left: 15px;
-    font-size: 18px;
-    font-family: BebasNeue;
-    color: #515151;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-content: baseline;
-    flex-basis: auto;
-    opacity: 0.9;
-    width: 90%;
-    margin: auto;
-}
-.dropdown-content {
-    max-height: 600px;
-}
-.dropdown-content>li {
-    text-align: center;
-}
-.select-dropdown.dropdown-trigger {
-    text-align: center;
-}
-#vehicle_spawner>.buy_dialog {
-    display: block;
-    position: relative;
-    font-size: 18px;
-    font-family: BebasNeue;
-    color: #515151;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-content: baseline;
-    flex-basis: auto;
-    opacity: 0.9;
-    margin-top: 15px;
-    overflow: overlay;
-}
-#vehicle_spawner>.buy_dialog {
-    display: block;
-    position: relative;
-    font-size: 18px;
-    font-family: BebasNeue;
-    color: #515151;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-content: baseline;
-    flex-basis: auto;
-    opacity: 0.9;
-    height: calc(20% - 20px);
-    margin-top: 45px;
-    overflow: overlay;
-}
-#progress {
-    display: inline-block;
+#lobbies>.lobby>.name {
     position: absolute;
-    padding: 0.5vh;
-    width: 45vw;
-    background: rgba(238, 238, 238, 0.95);
-    top: calc(40%);
-    left: calc(50% - 22.5vw);
-    transition: all 0.3s cubic-bezier(.59, 0, .66, 1.31);
-    opacity: 1;
-    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
-    min-height: 250px;
-    min-width: 600px;
-    opacity: 0.9;
-}
-#progress>.headline {
-    display: block;
-    position: relative;
-    width: 30vw;
-    padding-top: 10px;
-    padding-left: 15px;
-    font-size: 18px;
-    font-family: BebasNeue;
-    color: #515151;
-}
-#progress>.level_progress {
-    display: block;
-    position: relative;
-    width: 70%;
-    margin-left: 15%;
-    font-size: 18px;
-    font-family: BebasNeue;
-    color: #515151;
-    margin-top: 2vh;
-}
-#progress>.level_progress>.level {
-    text-align: center;
-    letter-spacing: 0.01em;
-    font-size: 18px;
-    padding-top: 0px;
-    padding-bottom: 5px;
-}
-#progress>.level_progress>.next-level {
-    text-align: center;
-    letter-spacing: 0.01em;
-    font-size: 18px;
-    padding-top: 0px;
-    padding-bottom: 5px;
-}
-#progress>.level_progress>.progress-bar {
-    background-color: #595959;
-    /*background-color: rgb(231, 231, 231);*/
-    height: 35px;
-    padding: 3px;
-    padding-right: 3px;
-    padding-left: 3px;
-    padding-left: 4px;
-    padding-right: 4px;
-    width: 100%;
-    border-radius: 5px;
-    box-shadow: 0 1px 5px #000 inset, 0 1px 0 #444;
-}
-#progress>.level_progress>.progress-bar span {
-    display: block;
-    height: 95%;
-    border-radius: 3px;
-    box-shadow: 0 1px 0 rgba(255, 255, 255, .5) inset;
-    transition: width .4s ease-in-out;
-    margin-top: 1px;
-}
-#progress>.level_progress .blue {
-    background-color: #34c2e3;
-}
-#progress>.level_progress .orange span {
-    background-color: #fecf23;
-    background-image: linear-gradient(top, #fecf23, #fd9215);
-}
-#progress>.level_progress .green span {
-    background-color: #a5df41;
-    background-image: linear-gradient(top, #a5df41, #4ca916);
-}
-#progress>.level_progress .stripes span {
-    background-size: 30px 30px;
-    background-image: linear-gradient(135deg, rgba(255, 255, 255, .15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .15) 50%, rgba(255, 255, 255, .15) 75%, transparent 75%, transparent);
-    animation: animate-stripes 3s linear infinite;
-}
-@keyframes animate-stripes {
-    0% {
-        background-position: 0 0;
-    }
-    100% {
-        background-position: 60px 0;
-    }
-}
-#progress>.level_progress>.points {
-    text-align: center;
+    top:1.5vh;
+    left:1.2vw;
+    color:#FFF;
+    text-shadow: -1px 0 rgba(0,0,0,0.5), 0 1px rgba(0,0,0,0.5), 1px 0 rgba(0,0,0,0.5), 0 -1px rgba(0,0,0,0.5);
+    font-size:1.8vh;
+    text-transform: uppercase;
+    font-family: Lato;
+    font-weight: 600;
     letter-spacing: 0.1em;
-    font-size: 18px;
-    padding-top: 5px;
 }
 
-#scoreboard {
+#lobbies>.lobby>.players {
     position: absolute;
-    width:60%;
-    height:50%;
-    top:25%;
-    left:20%;
-    background: rgba(50,50,50,0.4);
+    top:4vh;
+    left:1.2vw;
+    color:#FFF;
+    text-shadow: -1px 0 rgba(0,0,0,0.5), 0 1px rgba(0,0,0,0.5), 1px 0 rgba(0,0,0,0.5), 0 -1px rgba(0,0,0,0.5);
+    font-size:1.5vh;
+    text-transform: uppercase;
+    font-family: Lato;
+    font-weight: 600;
+    letter-spacing: 0.1em;
 }
-#scoreboard > .groups{
+#lobbies>.lobby>.map {
     position: absolute;
-    width:60%;
-    height:50%;
-    top:25%;
-    left:20%;
-    background: rgba(50,50,50,0.4);
+    top:6.2vh;
+    left:1.2vw;
+    color:#FFF;
+    text-shadow: -1px 0 rgba(0,0,0,0.5), 0 1px rgba(0,0,0,0.5), 1px 0 rgba(0,0,0,0.5), 0 -1px rgba(0,0,0,0.5);
+    font-size:1.5vh;
+    text-transform: uppercase;
+    font-family: Lato;
+    font-weight: 600;
+    letter-spacing: 0.1em;
 }
+
+#lobbies>.lobby>.id {
+    position: absolute;
+    bottom:0.1vh;
+    left:0.1vw;
+    color:rgba(255,255,255,0.8);
+    text-shadow: -1px 0 rgba(0,0,0,0.5), 0 1px rgba(0,0,0,0.5), 1px 0 rgba(0,0,0,0.5), 0 -1px rgba(0,0,0,0.5);
+    font-size:1vh;
+    text-transform: uppercase;
+    font-family: Lato;
+    font-weight: 600;
+    letter-spacing: 0.1em;
+}
+
+
+
+
+
 
 
 
@@ -626,5 +305,5 @@ input:focus {
 }
 ::-webkit-scrollbar-thumb {
     border-radius: 2px;
-    background-color: rgba(197, 49, 49, 0.4);
+    background-color: rgba(255, 136, 0, 0.2);
 }
