--- a/client/cef/css/style.css
+++ b/client/cef/css/style.css
@@ -1,33 +1,26 @@
 :root {
     --row_height: 12vh;
 }
-
-
 @font-face {
     font-family: Roboto;
     src: url('../fonts/Roboto-Regular.ttf') format('truetype');
     font-weight: normal;
 }
-
 @font-face {
     font-family: Roboto;
     src: url('../fonts/Roboto-Bold.ttf') format('truetype');
     font-weight: bold;
 }
-
-
 @font-face {
     font-family: Lato;
     src: url("../fonts/Lato-Regular.ttf") format('truetype');
     font-weight: normal;
 }
-
 @font-face {
     font-family: Lato;
     src: url("../fonts/Lato-Bold.ttf") format('truetype');
     font-weight: bold;
 }
-
 @font-face {
     font-family: "BebasNeue";
     src: url('../fonts/BebasNeue-Regular.ttf');
@@ -37,10 +30,14 @@ body {
     overflow: hidden;
     padding: 0;
     margin: 0;
-  -webkit-user-select: none; /* Safari 3.1+ */
-  -moz-user-select: none; /* Firefox 2+ */
-  -ms-user-select: none; /* IE 10+ */
-  user-select: none; /* Standard syntax */
+    -webkit-user-select: none;
+    /* Safari 3.1+ */
+    -moz-user-select: none;
+    /* Firefox 2+ */
+    -ms-user-select: none;
+    /* IE 10+ */
+    user-select: none;
+    /* Standard syntax */
 }
 .btn {
     font-family: BebasNeue;
@@ -194,7 +191,7 @@ input:focus {
     flex-wrap: wrap;
     justify-content: center;
     align-content: baseline;
-    overflow:overlay;
+    overflow: overlay;
 }
 #lobbies>.lobby {
     position: relative;
@@ -236,24 +233,23 @@ input:focus {
 }
 #lobbies>.lobby>.name {
     position: absolute;
-    top:1.5vh;
-    left:1.2vw;
-    color:#FFF;
-    text-shadow: -1px 0 rgba(0,0,0,0.5), 0 1px rgba(0,0,0,0.5), 1px 0 rgba(0,0,0,0.5), 0 -1px rgba(0,0,0,0.5);
-    font-size:1.8vh;
+    top: 1.5vh;
+    left: 1.2vw;
+    color: #FFF;
+    text-shadow: -1px 0 rgba(0, 0, 0, 0.5), 0 1px rgba(0, 0, 0, 0.5), 1px 0 rgba(0, 0, 0, 0.5), 0 -1px rgba(0, 0, 0, 0.5);
+    font-size: 1.8vh;
     text-transform: uppercase;
     font-family: Lato;
     font-weight: 600;
     letter-spacing: 0.1em;
 }
-
 #lobbies>.lobby>.players {
     position: absolute;
-    top:4vh;
-    left:1.2vw;
-    color:#FFF;
-    text-shadow: -1px 0 rgba(0,0,0,0.5), 0 1px rgba(0,0,0,0.5), 1px 0 rgba(0,0,0,0.5), 0 -1px rgba(0,0,0,0.5);
-    font-size:1.5vh;
+    top: 4vh;
+    left: 1.2vw;
+    color: #FFF;
+    text-shadow: -1px 0 rgba(0, 0, 0, 0.5), 0 1px rgba(0, 0, 0, 0.5), 1px 0 rgba(0, 0, 0, 0.5), 0 -1px rgba(0, 0, 0, 0.5);
+    font-size: 1.5vh;
     text-transform: uppercase;
     font-family: Lato;
     font-weight: 600;
@@ -261,35 +257,243 @@ input:focus {
 }
 #lobbies>.lobby>.map {
     position: absolute;
-    top:6.2vh;
-    left:1.2vw;
-    color:#FFF;
-    text-shadow: -1px 0 rgba(0,0,0,0.5), 0 1px rgba(0,0,0,0.5), 1px 0 rgba(0,0,0,0.5), 0 -1px rgba(0,0,0,0.5);
-    font-size:1.5vh;
+    top: 6.2vh;
+    left: 1.2vw;
+    color: #FFF;
+    text-shadow: -1px 0 rgba(0, 0, 0, 0.5), 0 1px rgba(0, 0, 0, 0.5), 1px 0 rgba(0, 0, 0, 0.5), 0 -1px rgba(0, 0, 0, 0.5);
+    font-size: 1.5vh;
     text-transform: uppercase;
     font-family: Lato;
     font-weight: 600;
     letter-spacing: 0.1em;
 }
-
+#lobbies>.lobby>.rounds {
+    position: absolute;
+    top: 8.2vh;
+    left: 1.2vw;
+    color: #FFF;
+    text-shadow: -1px 0 rgba(0, 0, 0, 0.5), 0 1px rgba(0, 0, 0, 0.5), 1px 0 rgba(0, 0, 0, 0.5), 0 -1px rgba(0, 0, 0, 0.5);
+    font-size: 1.2vh;
+    text-transform: uppercase;
+    font-family: Lato;
+    font-weight: 600;
+    letter-spacing: 0.1em;
+}
+#lobbies>.lobby>.status {
+    position: absolute;
+    bottom: 2vh;
+    left: 1.2vw;
+    color: #FFF;
+    text-shadow: -1px 0 rgba(0, 0, 0, 0.5), 0 1px rgba(0, 0, 0, 0.5), 1px 0 rgba(0, 0, 0, 0.5), 0 -1px rgba(0, 0, 0, 0.5);
+    font-size: 1.2vh;
+    text-transform: uppercase;
+    font-family: Lato;
+    font-weight: 600;
+    letter-spacing: 0.1em;
+}
 #lobbies>.lobby>.id {
     position: absolute;
-    bottom:0.1vh;
-    left:0.1vw;
-    color:rgba(255,255,255,0.8);
-    text-shadow: -1px 0 rgba(0,0,0,0.5), 0 1px rgba(0,0,0,0.5), 1px 0 rgba(0,0,0,0.5), 0 -1px rgba(0,0,0,0.5);
-    font-size:1vh;
+    bottom: 0.1vh;
+    left: 0.1vw;
+    color: rgba(255, 255, 255, 0.8);
+    text-shadow: -1px 0 rgba(0, 0, 0, 0.5), 0 1px rgba(0, 0, 0, 0.5), 1px 0 rgba(0, 0, 0, 0.5), 0 -1px rgba(0, 0, 0, 0.5);
+    font-size: 1vh;
     text-transform: uppercase;
     font-family: Lato;
     font-weight: 600;
     letter-spacing: 0.1em;
 }
+.modal_front {
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.5);
+    position: absolute;
+    z-index: 1;
+}
+.modal_front>.window {
+    position: relative;
+    width: 25vw;
+    background: red;
+    left: calc(50% - 12.5vw);
+    top: calc(50% - 12.5vh);
+}
+.modal_front>.window>.title {
+    position: relative;
+    width: 100%;
+    text-align: center;
+    color: #FFF;
+    line-height: 30px;
+    border-bottom: 1px solid white;
+}
+#modal_lobby.modal_front>.window {
+    position: relative;
+    width: 20vw;
+    background: rgba(9, 9, 9, 0.8);
+    left: calc(50% - 10vw);
+    top: calc(50% - 12.5vh);
+    box-shadow: 0px 0px 100px 5px rgba(0, 0, 0, 1);
+}
+#modal_lobby.modal_front>.window>.teams {
+    height: calc( 100% - 100px);
+}
+#modal_lobby.modal_front>.window>.teams>.info {
+    position: relative;
+    width: 100%;
+    text-align: center;
+    color: #FFF;
+    padding-top: 7px;
+    padding-bottom: 7px;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+}
+#modal_lobby.modal_front>.window>.teams>.list {
+    overflow: overlay;
+}
+#modal_lobby.modal_front>.window>.teams>.list>.team {
+    color: #FFF;
+    width: 100%;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    float: left;
+    cursor: pointer;
+    background: rgba(0, 0, 0, 0);
+    transition: all 0.3s linear;
+}
+#modal_lobby.modal_front>.window>.teams>.list>.team:hover {
+    background: rgba(50, 50, 50, 0.4);
+    transition: all 0.3s linear;
+}
+#modal_lobby.modal_front>.window>.teams>.list>.team.selected {
+    background: rgba(50, 50, 50, 0.6);
+}
+#modal_lobby.modal_front>.window>.teams>.list>.team>.name {
+    color: #FFF;
+    width: 50%;
+    display: inline-block;
+    float: left;
+    text-align: left;
+    padding-left: 2vw;
+}
+#modal_lobby.modal_front>.window>.teams>.list>.team>.players {
+    color: #FFF;
+    width: 50%;
+    display: inline-block;
+    float: left;
+    text-align: right;
+    padding-right: 2vw;
+}
+#modal_lobby.modal_front>.window>.buttons {
+    position: relative;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-content: center;
+    padding-bottom: 15px;
+    padding-top: 15px;
+}
+#modal_lobby.modal_front>.window>.buttons>.button {
+    display: inline-block;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 15px;
+    padding-right: 15px;
+    background: rgba(85, 242, 92, 0.6);
+    cursor: pointer;
+    width: 5vw;
+    text-align: center;
+    max-width: 100px;
+    color: #FFF;
+    height: 28px;
+    text-shadow: -1px 2px rgba(0, 0, 0, 0.2), 2px 1px rgba(0, 0, 0, 0.2), 1px 2px rgba(0, 0, 0, 0.2), 2px -1px rgba(0, 0, 0, 0.2);
+    border-radius: 2px;
+}
+#modal_lobby.modal_front>.window>.buttons>.button.red {
+    background: rgba(214, 67, 64, 0.6);
+}
 
+#lobby_waiting {
+    position: absolute;
+    padding-top:20px;
+    width:40%;
+    left:calc(50% - 20%);
+    background: rgba(0,0,0,0.2);
 
+    display: inline-flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-content: center;
+}
+#lobby_waiting>.info {  
+    position: absolute;
+    width:100%;
+    text-align: center;
+    font-size:16px;
+    font-family: Lato;
+    font-weight: 300;
+    letter-spacing: -0.01em;
+    top:5px;
+    color:#FFF;
+    text-shadow: -1px 2px rgba(0, 0, 0, 0.2), 2px 1px rgba(0, 0, 0, 0.2), 1px 2px rgba(0, 0, 0, 0.2), 2px -1px rgba(0, 0, 0, 0.2);
+}
+#lobby_waiting>.team {  
+    flex: 1 1;
+    position: relative;
+    font-size:16px;
+    font-family: Lato;
+    font-weight: 300;
+    letter-spacing: -0.01em;
+}
+#lobby_waiting>.team>.name {
+    width:100%;
+    display:block;
+    text-align: center;
 
+    font-size:20px;
+    font-family: Lato;
+    font-weight: 300;
+    letter-spacing: -0.01em;
 
+    padding-top:15px;
+    padding-bottom:15px;
+    color:#FFF;
 
+    text-shadow: -1px 2px rgba(0, 0, 0, 0.2), 2px 1px rgba(0, 0, 0, 0.2), 1px 2px rgba(0, 0, 0, 0.2), 2px -1px rgba(0, 0, 0, 0.2);
+}
 
+#lobby_waiting>.team>.players {
+    width:100%;
+    display:block;
+    text-align: center;
+}
+#lobby_waiting>.team>.players >.player{
+    float:left;
+    display:block;
+    width:100%;
+    padding-top:5px;
+    padding-bottom:5px;
+}
+#lobby_waiting>.team>.players >.player>.name{
+    float:left;
+    padding-left:10px;
+    color:#FFF;
+
+    text-shadow: -1px 2px rgba(0, 0, 0, 0.2), 2px 1px rgba(0, 0, 0, 0.2), 1px 2px rgba(0, 0, 0, 0.2), 2px -1px rgba(0, 0, 0, 0.2);
+}
+
+#lobby_waiting>.team>.players >.player>.ping{
+    float:right;
+    color:#FFF;
+
+    display:block;
+    padding-right:10px;
+    
+    text-shadow: -1px 2px rgba(0, 0, 0, 0.2), 2px 1px rgba(0, 0, 0, 0.2), 1px 2px rgba(0, 0, 0, 0.2), 2px -1px rgba(0, 0, 0, 0.2);
+}
+#lobby_waiting>.team>.players >.player:last-child {
+    padding-bottom: 50px;
+}
 
 
 
